[tool.poetry]
name = "tennis-booking-system"
version = "0.1.0"
description = ""
authors = ["kazuW <35624002+kazuW@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tennis_booking_system"}]

[tool.poetry.dependencies]
python = "^3.11.3"
streamlit = "^1.42.0"
pandas = "^2.2.3"
numpy = "^1.26.0"
flask = "3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
